--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-summernote==0.8.20.0
 oauthlib==3.2.2
+Pillow==9.3.0
 psycopg2==2.9.5
 PyJWT==2.6.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
+reverse==0.1.0
+slugify==0.0.1
 sqlparse==0.4.3
