--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 cloudinary==1.30.0
 dj-database-url==1.0.0
 dj3-cloudinary-storage==0.0.6
-Django==4.1.3
+Django==4.1.4
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-summernote==0.8.20.0
@@ -13,6 +13,5 @@ psycopg2==2.9.5
 PyJWT==2.6.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
-reverse==0.1.0
 slugify==0.0.1
 sqlparse==0.4.3
