--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 cloudinary==1.30.0
 dj-database-url==1.0.0
 dj3-cloudinary-storage==0.0.6
@@ -7,6 +7,7 @@ Django==4.1.4
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-summernote==0.8.20.0
+gunicorn==20.1.0
 oauthlib==3.2.2
 Pillow==9.3.0
 psycopg2==2.9.5
